Fix check-style warnings in HistoryManager